fftools/ffmpeg_mux_init: Use all metadata selectors if none is specified.

Fixes regression from 3c7dd5ed37da6d2de06c4850de5a319ca9cdd47f.
Fixes ticket #10157.